# s3-upload

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
templates/: upload.html
